# NVIDIA-Nemotron-Model-Reasoning-Challenge

./: .env.example  .gitignore  Codex.md  Makefile  README.md  input_requirements.txt  package-lock.json  package.json  prd.json  progress.txt
apps/backend/: pyproject.toml
apps/backend/src/nemotron_platform/: artifacts.py  benchmarks.py  competition_baseline.py  config.py  main.py  models.py  repository.py  runtime.py
apps/backend/src/nemotron_platform/providers/: __init__.py  base.py  factory.py  mock.py  openai_compatible.py
apps/backend/src/nemotron_platform/services/: __init__.py  evaluation.py  orchestration.py  submissions.py  synthetic.py
apps/backend/src/nemotron_platform/temporal/: activities.py  worker.py  workflows.py
apps/backend/tests/: test_benchmark_loader.py  test_competition_baseline.py  test_repository.py
apps/frontend/: index.html  package.json  tsconfig.app.tsbuildinfo
docs/competition/: compliance_matrix.md  daily_decision_log.md  data.md  discussion-681745.md  evaluation.md  kaggle_dependency_manager_commands.txt  kaggle_offline_runtime.md  model_runtime_notes.md  overview.md  rules.md  source_capture.md  submission-demo-input.md  submission_contract.md
experiments/benchmarks/: sample_reasoning.jsonl
notebooks/: README.md  nemotron_leaderboard_engine.ipynb  nvidia-nemotron-first-submit.ipynb  nvidia-nemotron-sfttrainer-training.ipynb  nvidia-nemotron-submission-demo.ipynb
scripts/: build_nemotron_sfttrainer_training_notebook.py  build_nemotron_submission_demo_notebook.py  import_kaggle_run.py  run_competition_baseline.py
(+35 files in other folders)
